# shadow-moveset

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Mod.ini.in  README.md
resources/: config.json  hedgehog.ini
src/: CMakeLists.txt  DllMain.cpp  Mod.cpp  Patches.cpp  Patches.h  Pch.h  Variables.h  rfl_idiotism.cpp  rfl_idiotism.h  version.rc
src/utilities/: Helpers.h  stisCommon.h
